FEAT APP-0004: Updated header and main page with new design

--- a/pohlmanprotean.se/src/styles/tailwind.css
+++ b/pohlmanprotean.se/src/styles/tailwind.css
@@ -18,3 +18,7 @@ body {
     @apply flex flex-row space-x-4 w-full max-w-xs; /* Adjust max width as needed */
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+  
