--- a/pohlmanprotean.se/src/styles/globals.css
+++ b/pohlmanprotean.se/src/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes slideUp {
+    0% {
+      transform: translateY(50px); /* Start below the original position */
+      opacity: 0; /* Start invisible */
+    }
+    100% {
+      transform: translateY(0); /* End at the original position */
+      opacity: 1; /* End visible */
+    }
+  }
+  
+  .slide-up {
+    animation: slideUp 0.5s ease-out forwards; /* Duration and easing function */
+  }
+  
