--- a/pohlmanprotean.se/app/css/style.css
+++ b/pohlmanprotean.se/app/css/style.css
@@ -5,3 +5,9 @@
 @import "additional-styles/utility-patterns.css";
 @import "additional-styles/theme.css";
 @import "tailwindcss/utilities";
+
+
+html {
+    scroll-behavior: smooth;
+  }
+  
