--- a/pohlmanprotean.se/app/css/additional-styles/utility-patterns.css
+++ b/pohlmanprotean.se/app/css/additional-styles/utility-patterns.css
@@ -53,3 +53,22 @@ input[type="search"]::-webkit-search-results-decoration {
 .form-checkbox {
   @apply rounded;
 }
+
+
+  /* Custom scrollbar styles */
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.1); /* Background of the scrollbar track */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: rgba(63, 81, 181, 0.8); /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners for the scrollbar thumb */
+  }
+
+  .scrollbar-custom::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(63, 81, 181, 1); /* Color of the scrollbar thumb on hover */
+  }
